finished startScene and started to work on mainScene

--- a/com/usp/icmc/libraryControl/startScene.fxml
+++ b/com/usp/icmc/libraryControl/startScene.fxml
@@ -11,7 +11,7 @@
    <children>
       <HBox alignment="CENTER">
          <children>
-            <Label text="Library Control">
+            <Label text="Library Controller">
                <font>
                   <Font size="45.0" />
                </font>
