--- a/com/usp/icmc/libraryControl/mainScene.fxml
+++ b/com/usp/icmc/libraryControl/mainScene.fxml
@@ -34,12 +34,15 @@
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                  </VBox.margin>
                               </TextField>
-                              <TableView prefHeight="100.0" VBox.vgrow="ALWAYS">
+                               <TableView fx:id="booksTable" prefHeight="100.0" VBox.vgrow="ALWAYS">
                                 <columns>
-                                  <TableColumn maxWidth="-1.0" minWidth="100.0" prefWidth="-1.0" text="ID" />
-                                  <TableColumn minWidth="100.0" prefWidth="105.0" text="Author" />
-                                    <TableColumn prefWidth="75.0" text="Title" />
-                                    <TableColumn prefWidth="75.0" text="Status" />
+                                    <TableColumn fx:id="tableBookID" maxWidth="-1.0" minWidth="100.0" prefWidth="-1.0"
+                                                 text="ID"/>
+                                    <TableColumn fx:id="tableBookAuthor" minWidth="100.0" prefWidth="105.0"
+                                                 text="Author"/>
+                                    <TableColumn fx:id="tableBookTitle" prefWidth="75.0" text="Title"/>
+                                    <TableColumn fx:id="tableBookType" prefWidth="75.0" text="Type"/>
+                                    <TableColumn fx:id="tableBookStatus" prefWidth="75.0" text="Status"/>
                                 </columns>
                                  <VBox.margin>
                                     <Insets left="5.0" right="5.0" />
@@ -86,13 +89,14 @@
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                  </VBox.margin>
                               </TextField>
-                              <TableView VBox.vgrow="ALWAYS">
+                               <TableView fx:id="usersTable" VBox.vgrow="ALWAYS">
                                  <columns>
-                                    <TableColumn maxWidth="-1.0" minWidth="100.0" prefWidth="-1.0" text="ID" />
-                                    <TableColumn minWidth="100.0" prefWidth="105.0" text="Name" />
-                                    <TableColumn prefWidth="101.0" text="Borrowed" />
-                                    <TableColumn minWidth="0.0" prefWidth="87.0" text="Type" />
-                                    <TableColumn prefWidth="92.0" text="Status" />
+                                     <TableColumn fx:id="tableUserID" maxWidth="-1.0" minWidth="100.0" prefWidth="-1.0"
+                                                  text="ID"/>
+                                     <TableColumn fx:id="tableUserName" minWidth="100.0" prefWidth="105.0" text="Name"/>
+                                     <TableColumn fx:id="tableUserBorrowed" prefWidth="101.0" text="Borrowed"/>
+                                     <TableColumn fx:id="tableUserType" minWidth="0.0" prefWidth="87.0" text="Type"/>
+                                     <TableColumn fx:id="tableUserStatus" prefWidth="92.0" text="Status"/>
                                  </columns>
                                  <VBox.margin>
                                     <Insets left="5.0" right="5.0" />
