--- a/com/usp/icmc/libraryControl/newBookDialog.fxml
+++ b/com/usp/icmc/libraryControl/newBookDialog.fxml
@@ -7,7 +7,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.usp.icmc.libraryControl.newBookDialogController">
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.usp.icmc.libraryControl.newBookDialog">
    <children>
       <HBox alignment="CENTER">
          <children>
