--- a/com/usp/icmc/libraryControl/newUserDialog.fxml
+++ b/com/usp/icmc/libraryControl/newUserDialog.fxml
@@ -7,8 +7,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.usp.icmc.libraryControl.newUserDialog">
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+   <!--fx:controller="com.usp.icmc.libraryControl.newUserDialog">-->
    <children>
       <HBox alignment="CENTER">
          <children>
