--- a/com/usp/icmc/libraryControl/newUserDialog.fxml
+++ b/com/usp/icmc/libraryControl/newUserDialog.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.VBox?>
 
 <VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-   <!--fx:controller="com.usp.icmc.libraryControl.newUserDialog">-->
+   <!--fx:controller="com.usp.icmc.libraryControl.NewUserDialog">-->
    <children>
       <HBox alignment="CENTER">
          <children>
