--- a/com/usp/icmc/view/startScene.fxml
+++ b/com/usp/icmc/view/startScene.fxml
@@ -7,7 +7,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="521.0" prefWidth="583.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.usp.icmc.libraryControl.startSceneController">
+<VBox prefHeight="521.0" prefWidth="583.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.usp.icmc.controller.startSceneController">
    <children>
       <HBox alignment="CENTER">
          <children>
