--- a/com/usp/icmc/view/mainScene.fxml
+++ b/com/usp/icmc/view/mainScene.fxml
@@ -7,8 +7,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="270.0" prefWidth="648.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.usp.icmc.controller.mainSceneController">
+<VBox prefHeight="270.0" prefWidth="648.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.usp.icmc.controller.mainSceneController">
    <children>
       <HBox alignment="CENTER">
          <children>
@@ -41,9 +41,9 @@
                                                  text="ID"/>
                                     <TableColumn fx:id="tableBookAuthor" minWidth="100.0" prefWidth="105.0"
                                                  text="Author"/>
-                                    <TableColumn fx:id="tableBookTitle" prefWidth="75.0" text="Title"/>
-                                    <TableColumn fx:id="tableBookType" prefWidth="75.0" text="Type"/>
-                                    <TableColumn fx:id="tableBookStatus" prefWidth="75.0" text="Status"/>
+                                    <TableColumn fx:id="tableBookTitle" prefWidth="192.0" text="Title"/>
+                                    <TableColumn fx:id="tableBookType" minWidth="0.0" prefWidth="111.0" text="Type"/>
+                                    <TableColumn fx:id="tableBookStatus" minWidth="0.0" text="Status"/>
                                 </columns>
                                  <VBox.margin>
                                     <Insets left="5.0" right="5.0" />
