Added search box table filter

--- a/com/usp/icmc/view/mainScene.fxml
+++ b/com/usp/icmc/view/mainScene.fxml
@@ -30,7 +30,7 @@
                      <children>
                         <VBox alignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <TextField alignment="TOP_LEFT" promptText="Search Box">
+                               <TextField alignment="TOP_LEFT" fx:id="bookSearchBox" promptText="Search Box">
                                  <VBox.margin>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                  </VBox.margin>
@@ -93,7 +93,7 @@
                      <children>
                         <VBox alignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <TextField fx:id="searchBox" alignment="TOP_LEFT" promptText="Search Box">
+                               <TextField fx:id="userSearchBox" alignment="TOP_LEFT" promptText="Search Box">
                                  <VBox.margin>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                  </VBox.margin>
