--- a/com/usp/icmc/libraryController/view/mainScene.fxml
+++ b/com/usp/icmc/libraryController/view/mainScene.fxml
@@ -30,12 +30,13 @@
                      <children>
                         <VBox alignment="CENTER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                               <TextField alignment="TOP_LEFT" fx:id="bookSearchBox" promptText="Search Box">
+                               <TextField fx:id="bookSearchBox" alignment="TOP_LEFT" promptText="Search Box">
                                  <VBox.margin>
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                  </VBox.margin>
                               </TextField>
-                               <TableView fx:id="booksTable" prefHeight="100.0" VBox.vgrow="ALWAYS">
+                               <TableView fx:id="booksTable" onKeyTyped="#filterUserComboBox"
+                                          onMouseClicked="#filterUserComboBox" prefHeight="100.0" VBox.vgrow="ALWAYS">
                                 <columns>
                                     <TableColumn fx:id="tableBookID" maxWidth="-1.0" minWidth="100.0" prefWidth="-1.0"
                                                  text="ID"/>
@@ -98,7 +99,8 @@
                                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                                  </VBox.margin>
                               </TextField>
-                               <TableView fx:id="usersTable" onMouseClicked="#filterComboBox" VBox.vgrow="ALWAYS">
+                               <TableView fx:id="usersTable" onKeyTyped="#filterBooksComboBox"
+                                          onMouseClicked="#filterBooksComboBox" VBox.vgrow="ALWAYS">
                                  <columns>
                                      <TableColumn fx:id="tableUserID" maxWidth="-1.0" minWidth="100.0" prefWidth="-1.0"
                                                   text="ID"/>
